[gd_scene load_steps=6 format=3 uid="uid://qjqw1onpafnq"]

[ext_resource type="Script" path="res://ExternalSources/BreakableThings/physics-block/PhysicsBlock.gd" id="1_i0vyj"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_w434r"]
resource_local_to_scene = true
load_path = "res://.godot/imported/world.png-44f982c72aea7bc2d882398286bfc8a4.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_2ekp7"]
resource_local_to_scene = true
atlas = SubResource("CompressedTexture2D_w434r")
region = Rect2(64, 56, 8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_baqt6"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70rn1"]
size = Vector2(8, 8)

[node name="PhysicsBlock" type="RigidBody2D"]
collision_layer = 4
collision_mask = 4
input_pickable = true
continuous_cd = 1
max_contacts_reported = 10
contact_monitor = true
script = ExtResource("1_i0vyj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_2ekp7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_baqt6")

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_70rn1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
